--- a/BrewingApp/BrewingApp.csproj
+++ b/BrewingApp/BrewingApp.csproj
@@ -87,7 +87,9 @@
     <Compile Include="Converters\WeightConverter.cs" />
     <Compile Include="Converters\TemperatureConverter.cs" />
     <Compile Include="Converters\VolumeConverter.cs" />
+    <Compile Include="Models\Hop.cs" />
     <Compile Include="Models\Settings.cs" />
+    <Compile Include="Other\ExtensionMethods.cs" />
     <Compile Include="ViewModels\SettingsVM.cs" />
     <Compile Include="ViewModels\TemperatureVM.cs" />
     <Compile Include="MainPage.xaml.cs">
@@ -114,7 +116,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CustomControls\HopListItem.xaml.cs">
-      <DependentUpon>HopListItem.xaml</DependentUpon>
+      <DependentUpon>HopListPopup.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -146,7 +148,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="CustomControls\HopListItem.xaml">
+    <Page Include="CustomControls\HopListPopup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
