--- a/BrewingApp/BrewingApp.csproj
+++ b/BrewingApp/BrewingApp.csproj
@@ -167,6 +167,7 @@
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="XML\MaltVarities.xml" />
     <Resource Include="Images\plusButton.png" />
     <Resource Include="Images\icon_scales_big.png" />
     <Resource Include="Images\icon_scales_small.png" />
