--- a/BrewingApp/packages.config
+++ b/BrewingApp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MvvmLight" version="4.1.23.0" targetFramework="sl40-wp71" />
   <package id="SilverlightToolkitWP" version="4.2012.6.25" targetFramework="sl40-wp71" />
+  <package id="WPExtensions" version="1.3.7" targetFramework="wp71" />
 </packages>
