--- a/BrewingApp/BrewingApp.csproj
+++ b/BrewingApp/BrewingApp.csproj
@@ -180,6 +180,9 @@
     <Resource Include="Images\icon_grains_big.png" />
     <Resource Include="Images\icon_hops_big.png" />
     <Content Include="Images\Credits.txt" />
+    <Resource Include="Images\icon_gears_small.png" />
+    <Resource Include="Images\icon_grains_small.png" />
+    <Resource Include="Images\icon_scales_small.png" />
     <Content Include="Images\svg\icon_grains.svg" />
     <Content Include="XML\MaltVarities.xml" />
     <Content Include="Images\plusButton.png" />
