changed all namespaces to BrewBuddy

--- a/BrewingApp/BrewBuddy.csproj
+++ b/BrewingApp/BrewBuddy.csproj
@@ -9,8 +9,8 @@
     <ProjectTypeGuids>{C089C8C0-30E0-4E22-80C0-CE093F111A43};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BrewingApp</RootNamespace>
-    <AssemblyName>BrewingApp</AssemblyName>
+    <RootNamespace>BrewBuddy</RootNamespace>
+    <AssemblyName>BrewBuddy</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
     <TargetFrameworkProfile>WindowsPhone71</TargetFrameworkProfile>
@@ -20,9 +20,9 @@
     </SupportedCultures>
     <XapOutputs>true</XapOutputs>
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
-    <XapFilename>BrewingApp.xap</XapFilename>
+    <XapFilename>BrewBuddy.xap</XapFilename>
     <SilverlightManifestTemplate>Properties\AppManifest.xml</SilverlightManifestTemplate>
-    <SilverlightAppEntry>BrewingApp.App</SilverlightAppEntry>
+    <SilverlightAppEntry>BrewBuddy.App</SilverlightAppEntry>
     <ValidateXaml>true</ValidateXaml>
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
     <Utf8Output>true</Utf8Output>
@@ -181,6 +181,7 @@
     <Resource Include="Images\icon_flask_small.png" />
     <Content Include="Images\icon_app.png" />
     <Content Include="Images\icon_app_small.png" />
+    <Resource Include="Images\icon_hops_small.png" />
     <Content Include="Images\svg\icon_flask.svg" />
     <Content Include="Images\svg\icon_grains.svg" />
     <Content Include="XML\MaltVarities.xml" />
